--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,13 @@
 {
-    "name": "void-main/FnPHP",
-    "autoload": {
-        "psr-0" : {
-            "VoidMain\\FnPHP" : "src"
-        }
+  "name" : "void-main/FnPHP",
+  "description" : "Yet another function programming package for PHP 5.5+",
+  "version" : "0.0.1",
+  "require" : {
+    "php" : ">=5.5.0"
+  },
+  "autoload" : {
+    "psr-0" : {
+      "VoidMain\\FnPHP" : "src"
     }
+  }
 }
